# tufin_assignment

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agent/: builder.py  otel_callback.py  prompts.py  runner.py  trace.py
app/api/: dependencies.py
app/api/routers/: health.py  tasks.py
app/core/: config.py  logging.py  telemetry.py
app/db/: session.py
app/models/: task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: task_service.py
app/tools/: base.py  registry.py
app/tools/calculator/: factory.py  tool.py
app/tools/database_query/: factory.py  seed.py  tool.py
app/tools/unit_converter/: factory.py  tool.py
app/tools/weather/: factory.py  tool.py
app/tools/web_search/: factory.py  tool.py
docker/nginx/: nginx.conf
frontend/: index.html
tests/: conftest.py  test_integration.py  test_unit.py
